// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds classname to the Icon: Icon className includes additional className from props. 1`] = `"i extra-classname"`;

exports[`defaults props: props are defaulted to expected values. 1`] = `
<Icon
  className="i"
  name="info"
  type="pf"
/>
`;

exports[`passes additional props through: additional props are passed through. 1`] = `
<Icon
  className="i"
  id="id"
  name="info"
  type="pf"
/>
`;
